AudioContext should resolve promises with jsUndefined() and not jsNull() https://bugs.webkit.org/show_bug.cgi?id=145063

Reviewed by Sam Weinig.

Source/WebCore:

Covered by updated test.

* bindings/js/JSDOMPromise.h:
(WebCore::DeferredWrapper::resolve): resolving std::nullptr_t as jsUndefined() and not jsNull()

LayoutTests:

* webaudio/audiocontext-state.html: Added check of promise resolve value.


Canonical link: https://commits.webkit.org/163184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184588 268f45cc-cd09-0410-ab3c-d52691b4dbfc